# fio-emu

./: .dockerignore  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  Makefile  README.md  pyproject.toml  r01_make_inject.sh  r02_generate_api.sh  statement.json
docs/: .gitignore  API_docs_1_9.md  CONFIGURATION.md  DEVELOPMENT.md  gen_statements_json.md
fioemu/: __main__.py  app.py  cli.py  config.py  generator.py  utils.py  viewer.py
fioemu/routers/: __init__.py
fioemu/routers/by_id/: __init__.py
fioemu/routers/emu/: __init__.py
fioemu/routers/import_/: __init__.py
fioemu/routers/last/: __init__.py
fioemu/routers/last_statement/: __init__.py
fioemu/routers/merchant/: __init__.py
fioemu/routers/periods/: __init__.py
fioemu/routers/set_last_date/: __init__.py
fioemu/routers/set_last_id/: __init__.py
